# rustwood

./: .gitignore  README.md
server/: Cargo.toml  build.rs
server/proto/: greeter.proto
server/src/: main.rs
web/: package.json
web/src/components/Client/: Client.jsx  Client.stories.jsx  Client.test.jsx
web/src/grpc/: greeter_grpc_web_pb.d.ts  greeter_grpc_web_pb.js  greeter_pb.js
web/src/pages/HomePage/: HomePage.jsx
web/src/services/: greeting.js
